--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-sms.host=127.0.0.1
-sms.user-id=smppclient1
-sms.password=password
-sms.value=hello
+sms.smpp.host=127.0.0.1
+sms.smpp.user-id=smppclient1
+sms.smpp.password=password
+sms.smpp.requestDelivery=true
