--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-sms.smpp.host=127.0.0.1
-sms.smpp.user-id=smppclient1
-sms.smpp.password=password
-sms.smpp.requestDelivery=true
+spring.data.mongodb.uri=mongodb://localhost:27017/smpp-mongodb
