--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/smpp-mongodb
+
+# App Properties
+smpp.app.jwtSecret= bezKoderSecretKey
+smpp.app.jwtExpirationMs= 86400000
