--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
 	</properties>
 
 	<dependencies>
+	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    
+    <scope>provided</scope>
+</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -32,6 +40,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency>
+		    <groupId>io.github.kaiso.relmongo</groupId>
+		    <artifactId>relmongo</artifactId>
+		    <version>3.4.0-RC1</version>
+		</dependency>
 			<dependency>
         <groupId>org.mapstruct</groupId>
         <artifactId>mapstruct</artifactId>
@@ -58,6 +71,11 @@
 		</dependency>
 		
 		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<dependency>
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-test</artifactId>
         <scope>test</scope>
@@ -81,6 +99,17 @@
     <scope>test</scope>
     </dependency>
 		
+				<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		
+		<dependency>
+		  <groupId>io.jsonwebtoken</groupId>
+		  <artifactId>jjwt</artifactId>
+		  <version>0.9.1</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
