--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
     <artifactId>de.flapdoodle.embed.mongo</artifactId>
     <scope>test</scope>
     </dependency>
+    
+      <dependency>
+	 <groupId>org.apache.commons</groupId>
+	 <artifactId>commons-csv</artifactId>
+	 <version>1.8</version>
+   </dependency>
 		
 				<dependency>
 		  <groupId>org.springframework.boot</groupId>
