--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.data.mongodb.uri=mongodb://localhost:27017/smpp-mongodb
 # App Properties
 smpp.app.jwtSecret= bezKoderSecretKey
 smpp.app.jwtExpirationMs= 86400000
+
+spring.servlet.multipart.max-file-size=265MB
+spring.servlet.multipart.max-request-size=265MB
+spring.servlet.multipart.enabled=true
+
