--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -134,6 +139,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		
 
 	</dependencies>
 
